--- a/src/Components/navbar.module.css
+++ b/src/Components/navbar.module.css
@@ -3,4 +3,14 @@
     justify-content:space-around;
     align-items: center;
     list-style: none;
+    font-size: 1.125rem;
+}
+
+a{
+    text-decoration: none;
+    color: black;
+}
+a:hover{
+    color: hsl(0, 5%, 28%);
+    text-shadow: 0px 5px 50px hsl(0, 0%, 5%);
 }
